Calm Business: Fix the overflowing Contact Form input fields

--- a/calm-business/sass/forms/_fields.scss
+++ b/calm-business/sass/forms/_fields.scss
@@ -83,7 +83,6 @@ form {
 	input[type="datetime-local"],
 	input[type="color"] {
 		margin-bottom: 13.6px;
-		min-width: 300px;
 		min-height: 56px;
 	}
 
